improve order editor
